# deep_research_agent

./: Dockerfile  README.md  docker-compose.yml  environment.yml  setup-frontend.sh  setup-shadcn.sh
backend/: .env.example  check_setup.py  pyproject.toml  run_server.py
backend/src/: __init__.py
backend/src/agent/: configuration.py  graph.py  prompts.py  state.py  tools_and_schemas.py  utils.py
backend/src/api/: main.py
backend/src/models/: state.py
backend/src/utils/: search.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  verify-setup.js  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ResearchInterface.tsx  ResearchProcess.tsx  ResearchResults.tsx  ThemeToggle.tsx  Toast.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useToast.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  download.ts
